# mini-xr

./: .gitignore  build.gradle  test_camera2.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .clangd  CMakeLists.txt  qr_tracker_native.cpp
app/src/main/cpp/include/openxr/: openxr.h  openxr_platform.h  openxr_reflection.h  openxr_reflection_parent_structs.h  openxr_reflection_structs.h
app/src/main/java/com/sherlock/xr/: MainActivity.kt  XRApp.kt
app/src/main/java/com/sherlock/xr/classification/: DetectedObjectResult.kt  MLKitObjectDetector.kt  ObjectDetector.kt
app/src/main/java/com/sherlock/xr/classification/utils/: ImageUtils.kt  VertexUtils.kt  YuvToRgbConverter.kt
app/src/main/java/com/sherlock/xr/data/: DeviceRepository.kt
app/src/main/java/com/sherlock/xr/llm/: AIRepository.kt  Typewriter.kt
app/src/main/java/com/sherlock/xr/spatial/: CoordinateMapper.kt
app/src/main/java/com/sherlock/xr/ui/: DetailedPopup.kt  LabelBadge.kt
app/src/main/java/com/sherlock/xr/viewmodel/: XRMainViewModel.kt
app/src/main/res/drawable/: bg_ai_header.xml  bg_ai_pill.xml  ic_sparkles_24.xml
gradle/wrapper/: gradle-wrapper.properties
